--- a/research/unet.ipynb
+++ b/research/unet.ipynb
@@ -3,16 +3,22 @@
   {
    "cell_type": "markdown",
    "id": "990d467d-03bb-48fd-a740-94a0e86d5946",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Image processing"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7a0f872c-31b8-4b7c-a48d-7fcb725f050b",
+   "metadata": {},
+   "source": [
+    "Objeto para crear objeto data loader "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "60816244-2006-4057-8eb5-b002b67da70c",
    "metadata": {},
    "outputs": [],
@@ -24,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "c15612af-db1e-427f-bee5-a3c26fcead50",
    "metadata": {},
    "outputs": [],
@@ -37,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "bf4a1495-e0fa-464e-9ac4-34922af614cd",
    "metadata": {},
    "outputs": [],
@@ -47,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "ff49e9e5-2cdb-4a15-811c-0c3c7658cac3",
    "metadata": {},
    "outputs": [],
@@ -57,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "15f51d51-f654-4bef-be6e-7f68e633f5e8",
    "metadata": {},
    "outputs": [],
@@ -68,52 +74,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "ca8d3689-b345-4b54-bd19-7a6b939b489e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "Found no valid file for the classes class1. Supported extensions are: .jpg, .jpeg, .png, .ppm, .bmp, .pgm, .tif, .tiff, .webp",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m dataset \u001b[38;5;241m=\u001b[39m datasets\u001b[38;5;241m.\u001b[39mImageFolder(root\u001b[38;5;241m=\u001b[39mdata_dir, transform\u001b[38;5;241m=\u001b[39mtransform)\n",
+      "File \u001b[1;32mD:\\Anaconda3\\Lib\\site-packages\\torchvision\\datasets\\folder.py:309\u001b[0m, in \u001b[0;36mImageFolder.__init__\u001b[1;34m(self, root, transform, target_transform, loader, is_valid_file)\u001b[0m\n\u001b[0;32m    301\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\n\u001b[0;32m    302\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m    303\u001b[0m     root: \u001b[38;5;28mstr\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    307\u001b[0m     is_valid_file: Optional[Callable[[\u001b[38;5;28mstr\u001b[39m], \u001b[38;5;28mbool\u001b[39m]] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m    308\u001b[0m ):\n\u001b[1;32m--> 309\u001b[0m     \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(\n\u001b[0;32m    310\u001b[0m         root,\n\u001b[0;32m    311\u001b[0m         loader,\n\u001b[0;32m    312\u001b[0m         IMG_EXTENSIONS \u001b[38;5;28;01mif\u001b[39;00m is_valid_file \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m    313\u001b[0m         transform\u001b[38;5;241m=\u001b[39mtransform,\n\u001b[0;32m    314\u001b[0m         target_transform\u001b[38;5;241m=\u001b[39mtarget_transform,\n\u001b[0;32m    315\u001b[0m         is_valid_file\u001b[38;5;241m=\u001b[39mis_valid_file,\n\u001b[0;32m    316\u001b[0m     )\n\u001b[0;32m    317\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mimgs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msamples\n",
+      "File \u001b[1;32mD:\\Anaconda3\\Lib\\site-packages\\torchvision\\datasets\\folder.py:145\u001b[0m, in \u001b[0;36mDatasetFolder.__init__\u001b[1;34m(self, root, loader, extensions, transform, target_transform, is_valid_file)\u001b[0m\n\u001b[0;32m    143\u001b[0m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(root, transform\u001b[38;5;241m=\u001b[39mtransform, target_transform\u001b[38;5;241m=\u001b[39mtarget_transform)\n\u001b[0;32m    144\u001b[0m classes, class_to_idx \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfind_classes(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mroot)\n\u001b[1;32m--> 145\u001b[0m samples \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmake_dataset(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mroot, class_to_idx, extensions, is_valid_file)\n\u001b[0;32m    147\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mloader \u001b[38;5;241m=\u001b[39m loader\n\u001b[0;32m    148\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mextensions \u001b[38;5;241m=\u001b[39m extensions\n",
+      "File \u001b[1;32mD:\\Anaconda3\\Lib\\site-packages\\torchvision\\datasets\\folder.py:189\u001b[0m, in \u001b[0;36mDatasetFolder.make_dataset\u001b[1;34m(directory, class_to_idx, extensions, is_valid_file)\u001b[0m\n\u001b[0;32m    184\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m class_to_idx \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    185\u001b[0m     \u001b[38;5;66;03m# prevent potential bug since make_dataset() would use the class_to_idx logic of the\u001b[39;00m\n\u001b[0;32m    186\u001b[0m     \u001b[38;5;66;03m# find_classes() function, instead of using that of the find_classes() method, which\u001b[39;00m\n\u001b[0;32m    187\u001b[0m     \u001b[38;5;66;03m# is potentially overridden and thus could have a different logic.\u001b[39;00m\n\u001b[0;32m    188\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe class_to_idx parameter cannot be None.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 189\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m make_dataset(directory, class_to_idx, extensions\u001b[38;5;241m=\u001b[39mextensions, is_valid_file\u001b[38;5;241m=\u001b[39mis_valid_file)\n",
+      "File \u001b[1;32mD:\\Anaconda3\\Lib\\site-packages\\torchvision\\datasets\\folder.py:102\u001b[0m, in \u001b[0;36mmake_dataset\u001b[1;34m(directory, class_to_idx, extensions, is_valid_file)\u001b[0m\n\u001b[0;32m    100\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m extensions \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    101\u001b[0m         msg \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSupported extensions are: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mextensions\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mif\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28misinstance\u001b[39m(extensions,\u001b[38;5;250m \u001b[39m\u001b[38;5;28mstr\u001b[39m)\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01melse\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(extensions)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m--> 102\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(msg)\n\u001b[0;32m    104\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m instances\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: Found no valid file for the classes class1. Supported extensions are: .jpg, .jpeg, .png, .ppm, .bmp, .pgm, .tif, .tiff, .webp"
+     ]
+    }
+   ],
    "source": [
     "dataset = datasets.ImageFolder(root=data_dir, transform=transform)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "66816929-f145-46b5-b7d5-63bb21b45039",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(tensor([[[0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "          [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-       " \n",
-       "         [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "          [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-       " \n",
-       "         [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "          [0., 0., 0.,  ..., 0., 0., 0.]]]),\n",
-       " 0)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m dataset[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dataset' is not defined"
+     ]
     }
    ],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "06c1dae5-f663-4609-851b-9a76444e9094",
    "metadata": {},
    "outputs": [],
@@ -197,10 +197,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "f5eaa379-dc9b-4ea0-acbf-307c4ca44fcc",
+   "execution_count": 3,
+   "id": "3074ca66-68bf-4acb-bbe2-ef0fc64c271c",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f5eaa379-dc9b-4ea0-acbf-307c4ca44fcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data_dir' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m files \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mlistdir(data_dir\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/class1\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data_dir' is not defined"
+     ]
+    }
+   ],
    "source": [
     "files = os.listdir(data_dir+'/class1')"
    ]
@@ -1099,16 +1121,66 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "270d64df-fedf-4b77-bf39-2cb425a08844",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DoubleConv(nn.Module):\n",
+    "    def __init__ (self, in_channels, out_channels):\n",
+    "        super().__init__\n",
+    "        self.conv = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels, out_channels, 3, 1, 1, bias=False),\n",
+    "            nn.BatchNorm2d(out_channels),\n",
+    "            nn.ReLU(inplace=True,\n",
+    "            nn.Conv2d(out_channels, out_channels, 3, 1, 1, bias=False),\n",
+    "            nn.BatchNorm2d(out_channels),\n",
+    "            nn.ReLU(inplace=True)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.conv(x)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "84f49830-00ad-468b-a16c-2c77d79effe4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Unet(nn.Module():\n",
-    "    def __init__(self):\n",
+    "class Unet(nn.Module):\n",
+    "    def __init__(self, in_channels = 3, out_channels = 2, features = [64, 128, 256, 512]):\n",
     "        super().__init__()\n",
-    "        self.down = nn.Secuential([\n",
+    "        self.downs = nn.ModuleList()\n",
+    "        self.ups = nn.ModuleList()\n",
+    "        self.pool = nn.MaxPool2d(kernel_size = 2, stride = 2)\n",
+    "\n",
+    "        for feature in features:\n",
+    "            self.downs.append(DoubleConv(in_channels feature))\n",
+    "            in_channels = feature\n",
+    "\n",
+    "        for feature in reversed(features):\n",
+    "            self.ups.append(nn.ConvTranspose2d(feature*2, feature, kernel_size=2, stride = 2))\n",
+    "            self.ups.append(DoubleConv(feature*2, feature))\n",
     "            \n",
-    "        ])"
+    "        \n",
+    "        self.bottom = DoubleConv(features[-1], features[-1]*2)\n",
+    "        self.last = nn.Conv2d(features[0], out_channels, 1\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "            sc = []\n",
+    "            for down in self.downs:\n",
+    "                x = down(x)\n",
+    "                sc.append(x)\n",
+    "                x = self.pool(x)\n",
+    "                \n",
+    "            x =self.bottom(x)\n",
+    "\n",
+    "            for up in self.ups:\n",
+    "                \n",
+    "            \n",
+    "        "
    ]
   },
   {
@@ -1117,6 +1189,14 @@
    "metadata": {},
    "source": [
     "## Loss Function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "955a18e8-81a3-4675-ab9a-66b369d088ad",
+   "metadata": {},
+   "source": [
+    "- Binary cross entropy loss function"
    ]
   },
   {
@@ -1369,6 +1449,16 @@
    "source": [
     "plt.plot(y, r2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c11103ba-aa46-4011-a969-6aac90fe23bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = nn.BCELoss()"
+   ]
   }
  ],
  "metadata": {
@@ -1376,6 +1466,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
