--- a/research/unet.ipynb
+++ b/research/unet.ipynb
@@ -323,10 +323,144 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2085b86a-b453-48f9-82bb-63e5c4ac978c",
+   "id": "108c237f-ee57-4001-b4d4-ac29aeb0348d",
    "metadata": {},
    "source": [
-    "## Model Architecture"
+    "## Data split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "b37ddcdf-57b2-4b38-aef1-1be9bdb5d50e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "9dbe317f-1927-4907-8437-9f8437127821",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'nj_124_2_LCA_RAO.png'"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = os.listdir(data_dir+'/unet_1/img')\n",
+    "X[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "4f1e309f-e295-4b56-a7d3-3e90651766ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'nj_124_2_LCA_RAO.png'"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = os.listdir(data_dir+'/unet_1/label')\n",
+    "y[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "eec23d83-892f-4fac-9a30-b5143ced1426",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "2067836b-d350-4998-a862-03c8054828dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "554"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "67849d0c-2172-4330-9f2f-163435962c9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "62"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "0a56e2be-b5b2-4595-997c-5cd9b98a8d81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=len(X_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6aa6657e-5543-4638-8c8e-8493685f125b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"${leb(}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78764963-2f76-4adf-b764-6d6a254659ff",
+   "metadata": {},
+   "source": [
+    "# Model Architecture"
    ]
   },
   {
