Unet: Finish model

--- a/research/unet.ipynb
+++ b/research/unet.ipynb
@@ -502,17 +502,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "id": "49752ff2-4b92-4266-9cad-c7f9a00a1b1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "import torchvision.transforms.functional as TF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "id": "270d64df-fedf-4b77-bf39-2cb425a08844",
    "metadata": {},
    "outputs": [],
@@ -536,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "84f49830-00ad-468b-a16c-2c77d79effe4",
    "metadata": {},
    "outputs": [],
@@ -549,7 +550,7 @@
     "        self.pool = nn.MaxPool2d(kernel_size = 2, stride = 2)\n",
     "\n",
     "        for feature in features:\n",
-    "            self.downs.append(DoubleConv(in_channels feature))\n",
+    "            self.downs.append(DoubleConv(in_channels, feature))\n",
     "            in_channels = feature\n",
     "\n",
     "        for feature in reversed(features):\n",
@@ -558,19 +559,28 @@
     "            \n",
     "        \n",
     "        self.bottom = DoubleConv(features[-1], features[-1]*2)\n",
-    "        self.last = nn.Conv2d(features[0], out_channels, 1\n",
+    "        self.last = nn.Conv2d(features[0], out_channels, 1)\n",
     "\n",
     "    def forward(self, x):\n",
-    "            sc = []\n",
-    "            for down in self.downs:\n",
-    "                x = down(x)\n",
-    "                sc.append(x)\n",
-    "                x = self.pool(x)\n",
+    "            \n",
+    "        sc = []\n",
+    "        for down in self.downs:\n",
+    "            x = down(x)\n",
+    "            sc.append(x)\n",
+    "            x = self.pool(x)\n",
     "                \n",
-    "            x =self.bottom(x)\n",
+    "        x =self.bottom(x)\n",
     "\n",
-    "            for up in self.ups:\n",
-    "                \n",
+    "        sc = sc[::-1]\n",
+    "\n",
+    "        for idx in range(0, len(self.ups),2):\n",
+    "            x = self.ups[idx](x)\n",
+    "            sc = sc[idx//2]\n",
+    "            if x.shape != sc.shape :\n",
+    "                x = TF.resize(x, size = sc.shape[2:])\n",
+    "            concat_skip = torch.cat((sc,x), dim=1)\n",
+    "            x = self.ups[idx+1](concat_skip)\n",
+    "        return self.last(x)\n",
     "            \n",
     "        "
    ]
@@ -625,7 +635,11 @@
    "outputs": [],
    "source": [
     "for i in range(epochs):\n",
-    "\n",
+    "    \n",
+    "    model.train()\n",
+    "    \n",
+    "    train_loss = 0\n",
+    "    \n",
     "    for b, (X_train, y_train) in enumerate(train_loader):\n",
     "        \n",
     "        y_pred = model.forward(X_train)\n",
@@ -633,12 +647,16 @@
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
+    "        train_loss = loss.item()\n",
+    "\n",
+    "    train_loss /= len(train_loader)\n",
     "\n",
     "    model.eval()\n",
     "\n",
-    "    for b, (X_val, y_val) in enumerate(val_loader):\n",
-    "        y_pred = model.forward(X_val)\n",
-    "        loss = criterion(y_pred, y_val)\n",
+    "    with torch.no_grad():\n",
+    "        for b, (X_val, y_val) in enumerate(val_loader):\n",
+    "            y_pred = model.forward(X_val)\n",
+    "            loss = criterion(y_pred, y_val)\n",
     "\n",
     "    model.train()\n",
     "        \n",
