Unet: Finish training and testing script

--- a/research/unet.ipynb
+++ b/research/unet.ipynb
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "id": "fec54517-d63a-494a-a9d6-2332942e4724",
    "metadata": {},
    "outputs": [],
@@ -624,7 +624,9 @@
     "epochs = 50\n",
     "train_losses = []\n",
     "test_losses = []\n",
-    "val_losses = []"
+    "test_correct = []\n",
+    "val_losses = []\n",
+    "val_correct = []"
    ]
   },
   {
@@ -647,20 +649,40 @@
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "        train_loss = loss.item()\n",
+    "        train_loss += loss.item()\n",
     "\n",
     "    train_loss /= len(train_loader)\n",
     "\n",
     "    model.eval()\n",
     "\n",
     "    with torch.no_grad():\n",
+    "        \n",
+    "        val_loss = 0\n",
     "        for b, (X_val, y_val) in enumerate(val_loader):\n",
     "            y_pred = model.forward(X_val)\n",
     "            loss = criterion(y_pred, y_val)\n",
-    "\n",
-    "    model.train()\n",
-    "        \n",
-    "        "
+    "            val_loss += loss.item()\n",
+    "        val_loss /= len(val_loader)\n",
+    "        val_losses.append(val_loss)\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "241c19a7-4fa7-479a-97f9-3a4006ae5662",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    test_loss = 0\n",
+    "    for b, (X_test, y_test) in enumerate(test_loader):\n",
+    "        y_pred = model.forward(X_test)\n",
+    "        loss = criterion(y_pred, y_test)\n",
+    "        test_loss += loss.item()\n",
+    "    test_loss /= len(test_loader)\n",
+    "    test_losses.append(test_loss)\n"
    ]
   },
   {
