Unet: Create script

--- a/practice/ann_car_sale.ipynb
+++ b/practice/ann_car_sale.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "id": "04af0ae8-6fb5-4dd3-8224-1590a2e03c3f",
    "metadata": {},
    "outputs": [],
@@ -11,20 +11,31 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "from torch.utils.data import DataLoader\n",
-    "from torchvision import datasets, transforms\n",
-    "from torchvision.utils import make_grid\n",
+    "from torch.utils.data import Dataset\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sn\n",
     "from sklearn.metrics import confusion_matrix\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
+   "id": "036a8ca2-49a3-46c4-96ef-2a9be06bab73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "151f14db-8a88-491a-8dfa-6664f4ec918c",
    "metadata": {},
    "outputs": [],
@@ -34,20 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "ad1cdce3-2528-4f39-87a5-5746b1173c7b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /Users/juancuevas/.kaggle/kaggle.json'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from kaggle.api.kaggle_api_extended import KaggleApi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "abdea862-7667-4e4e-bc3d-d3e61753db43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir = './db/'"
    ]
   },
   {
@@ -60,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "id": "314ed8ab-f634-4133-91db-9b7758a42783",
    "metadata": {},
    "outputs": [
@@ -79,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "id": "394b8f6b-f917-4805-871a-5b04d57eaa5c",
    "metadata": {},
    "outputs": [
@@ -99,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "id": "7fc2908e-868e-4745-a662-e1926e4fefb1",
    "metadata": {},
    "outputs": [
@@ -109,7 +122,7 @@
        "['car_purchasing.csv', 'c10']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,6 +130,498 @@
    "source": [
     "os.listdir(download_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "5453174a-e5ce-45c2-b68f-254b0d43c09a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(f\"{dir}/car_purchasing.csv\", encoding='latin1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "f49689bd-f8a6-43b5-b9e6-fa08920b74bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>annual Salary</th>\n",
+       "      <th>credit card debt</th>\n",
+       "      <th>net worth</th>\n",
+       "      <th>car purchase amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>500.000000</td>\n",
+       "      <td>500.000000</td>\n",
+       "      <td>500.000000</td>\n",
+       "      <td>500.000000</td>\n",
+       "      <td>500.000000</td>\n",
+       "      <td>500.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.506000</td>\n",
+       "      <td>46.241674</td>\n",
+       "      <td>62127.239608</td>\n",
+       "      <td>9607.645049</td>\n",
+       "      <td>431475.713625</td>\n",
+       "      <td>44209.799218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.500465</td>\n",
+       "      <td>7.978862</td>\n",
+       "      <td>11703.378228</td>\n",
+       "      <td>3489.187973</td>\n",
+       "      <td>173536.756340</td>\n",
+       "      <td>10773.178744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>20000.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>20000.000000</td>\n",
+       "      <td>9000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>40.949969</td>\n",
+       "      <td>54391.977195</td>\n",
+       "      <td>7397.515792</td>\n",
+       "      <td>299824.195900</td>\n",
+       "      <td>37629.896040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>46.049901</td>\n",
+       "      <td>62915.497035</td>\n",
+       "      <td>9655.035568</td>\n",
+       "      <td>426750.120650</td>\n",
+       "      <td>43997.783390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>51.612263</td>\n",
+       "      <td>70117.862005</td>\n",
+       "      <td>11798.867487</td>\n",
+       "      <td>557324.478725</td>\n",
+       "      <td>51254.709517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>100000.000000</td>\n",
+       "      <td>20000.000000</td>\n",
+       "      <td>1000000.000000</td>\n",
+       "      <td>80000.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           gender         age  annual Salary  credit card debt  \\\n",
+       "count  500.000000  500.000000     500.000000        500.000000   \n",
+       "mean     0.506000   46.241674   62127.239608       9607.645049   \n",
+       "std      0.500465    7.978862   11703.378228       3489.187973   \n",
+       "min      0.000000   20.000000   20000.000000        100.000000   \n",
+       "25%      0.000000   40.949969   54391.977195       7397.515792   \n",
+       "50%      1.000000   46.049901   62915.497035       9655.035568   \n",
+       "75%      1.000000   51.612263   70117.862005      11798.867487   \n",
+       "max      1.000000   70.000000  100000.000000      20000.000000   \n",
+       "\n",
+       "            net worth  car purchase amount  \n",
+       "count      500.000000           500.000000  \n",
+       "mean    431475.713625         44209.799218  \n",
+       "std     173536.756340         10773.178744  \n",
+       "min      20000.000000          9000.000000  \n",
+       "25%     299824.195900         37629.896040  \n",
+       "50%     426750.120650         43997.783390  \n",
+       "75%     557324.478725         51254.709517  \n",
+       "max    1000000.000000         80000.000000  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "6e88237d-dbbc-4df0-9ac7-0ec0043f7e97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer name</th>\n",
+       "      <th>customer e-mail</th>\n",
+       "      <th>country</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>annual Salary</th>\n",
+       "      <th>credit card debt</th>\n",
+       "      <th>net worth</th>\n",
+       "      <th>car purchase amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Martina Avila</td>\n",
+       "      <td>cubilia.Curae.Phasellus@quisaccumsanconvallis.edu</td>\n",
+       "      <td>Bulgaria</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41.851720</td>\n",
+       "      <td>62812.09301</td>\n",
+       "      <td>11609.380910</td>\n",
+       "      <td>238961.2505</td>\n",
+       "      <td>35321.45877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Harlan Barnes</td>\n",
+       "      <td>eu.dolor@diam.co.uk</td>\n",
+       "      <td>Belize</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40.870623</td>\n",
+       "      <td>66646.89292</td>\n",
+       "      <td>9572.957136</td>\n",
+       "      <td>530973.9078</td>\n",
+       "      <td>45115.52566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Naomi Rodriquez</td>\n",
+       "      <td>vulputate.mauris.sagittis@ametconsectetueradip...</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>1</td>\n",
+       "      <td>43.152897</td>\n",
+       "      <td>53798.55112</td>\n",
+       "      <td>11160.355060</td>\n",
+       "      <td>638467.1773</td>\n",
+       "      <td>42925.70921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jade Cunningham</td>\n",
+       "      <td>malesuada@dignissim.com</td>\n",
+       "      <td>Cook Islands</td>\n",
+       "      <td>1</td>\n",
+       "      <td>58.271369</td>\n",
+       "      <td>79370.03798</td>\n",
+       "      <td>14426.164850</td>\n",
+       "      <td>548599.0524</td>\n",
+       "      <td>67422.36313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cedric Leach</td>\n",
+       "      <td>felis.ullamcorper.viverra@egetmollislectus.net</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>1</td>\n",
+       "      <td>57.313749</td>\n",
+       "      <td>59729.15130</td>\n",
+       "      <td>5358.712177</td>\n",
+       "      <td>560304.0671</td>\n",
+       "      <td>55915.46248</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     customer name                                    customer e-mail  \\\n",
+       "0    Martina Avila  cubilia.Curae.Phasellus@quisaccumsanconvallis.edu   \n",
+       "1    Harlan Barnes                                eu.dolor@diam.co.uk   \n",
+       "2  Naomi Rodriquez  vulputate.mauris.sagittis@ametconsectetueradip...   \n",
+       "3  Jade Cunningham                            malesuada@dignissim.com   \n",
+       "4     Cedric Leach     felis.ullamcorper.viverra@egetmollislectus.net   \n",
+       "\n",
+       "        country  gender        age  annual Salary  credit card debt  \\\n",
+       "0      Bulgaria       0  41.851720    62812.09301      11609.380910   \n",
+       "1        Belize       0  40.870623    66646.89292       9572.957136   \n",
+       "2       Algeria       1  43.152897    53798.55112      11160.355060   \n",
+       "3  Cook Islands       1  58.271369    79370.03798      14426.164850   \n",
+       "4        Brazil       1  57.313749    59729.15130       5358.712177   \n",
+       "\n",
+       "     net worth  car purchase amount  \n",
+       "0  238961.2505          35321.45877  \n",
+       "1  530973.9078          45115.52566  \n",
+       "2  638467.1773          42925.70921  \n",
+       "3  548599.0524          67422.36313  \n",
+       "4  560304.0671          55915.46248  "
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "3536659f-f17f-46b0-ad21-8f0afb16eba5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['customer name', 'customer e-mail', 'country', 'gender', 'age',\n",
+       "       'annual Salary', 'credit card debt', 'net worth',\n",
+       "       'car purchase amount'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "28d3ef6a-6e0d-45bd-99c8-7806e852e7b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(['customer name', 'customer e-mail', 'country'], axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "a970d146-e571-462c-b4d1-4d742897b904",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>annual Salary</th>\n",
+       "      <th>credit card debt</th>\n",
+       "      <th>net worth</th>\n",
+       "      <th>car purchase amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>41.851720</td>\n",
+       "      <td>62812.09301</td>\n",
+       "      <td>11609.380910</td>\n",
+       "      <td>238961.2505</td>\n",
+       "      <td>35321.45877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>40.870623</td>\n",
+       "      <td>66646.89292</td>\n",
+       "      <td>9572.957136</td>\n",
+       "      <td>530973.9078</td>\n",
+       "      <td>45115.52566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>43.152897</td>\n",
+       "      <td>53798.55112</td>\n",
+       "      <td>11160.355060</td>\n",
+       "      <td>638467.1773</td>\n",
+       "      <td>42925.70921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>58.271369</td>\n",
+       "      <td>79370.03798</td>\n",
+       "      <td>14426.164850</td>\n",
+       "      <td>548599.0524</td>\n",
+       "      <td>67422.36313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>57.313749</td>\n",
+       "      <td>59729.15130</td>\n",
+       "      <td>5358.712177</td>\n",
+       "      <td>560304.0671</td>\n",
+       "      <td>55915.46248</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   gender        age  annual Salary  credit card debt    net worth  \\\n",
+       "0       0  41.851720    62812.09301      11609.380910  238961.2505   \n",
+       "1       0  40.870623    66646.89292       9572.957136  530973.9078   \n",
+       "2       1  43.152897    53798.55112      11160.355060  638467.1773   \n",
+       "3       1  58.271369    79370.03798      14426.164850  548599.0524   \n",
+       "4       1  57.313749    59729.15130       5358.712177  560304.0671   \n",
+       "\n",
+       "   car purchase amount  \n",
+       "0          35321.45877  \n",
+       "1          45115.52566  \n",
+       "2          42925.70921  \n",
+       "3          67422.36313  \n",
+       "4          55915.46248  "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "6b20d0cb-c094-4cea-807c-c7ba67d5be7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np_dataset = df.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "86d13237-7a29-45d0-a3fb-d78fb54ce5ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "500"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(np_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "63e26e0a-1625-4c65-a7ed-a9ca454a7d71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CarDataset(Dataset):\n",
+    "    def __init__(self, X, y):\n",
+    "        super().__init__()\n",
+    "        self.X = X\n",
+    "        self.y = y\n",
+    "    def __len__(self):\n",
+    "        return len(self.X)\n",
+    "        \n",
+    "    def __getitem__(self, idx):\n",
+    "        X = torch.tensor(self.X[idx])\n",
+    "        y = torch.tensor(self.y[idx])\n",
+    "        return X, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c75bcc3-a8a0-4801-9284-ce9a266d9084",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
