Unet: Update unet notebook

--- a/practice/cnn_cd.ipynb
+++ b/practice/cnn_cd.ipynb
@@ -574,6 +574,47 @@
    "id": "348041f6-258d-4f5c-9c5a-f88c3370b770",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class Cnn(nn.Module):\n",
+    "\tdef __init__(self):\n",
+    "\t\tsuper().__init__()\n",
+    "\t\tself.conv1 = nn.Conv2d(1, 6, 3, 1)\n",
+    "\t\tself.conv2 = nn.Conv2d(6,16, 3, 1)\n",
+    "\t\tself.fc1 = nn.Linear(54*54*16, 120)\n",
+    "\t\tself.fc2 = nn.Linear(120, 84)\n",
+    "\t\tself.fc3 = nn.Linear(84,2)\n",
+    "\n",
+    "\tdef forward(self, x):\n",
+    "\t\tx = F.relu(self.conv1(x))\n",
+    "\t\tx = F.max_pool2d(x, 2,2)\n",
+    "\t\tx = F.relu(self.conv2(x))\t\n",
+    "\t\tx = F.max_pool2d(x,2,2)\n",
+    "\t\tx = x.view(-1, 54*54*16)\n",
+    "\t\tx = F.relu(self.fc1(x))\n",
+    "\t\tx = F.relu(self.fc2(x))\n",
+    "\t\tx = self.fc3(x)\n",
+    "\t\treturn F.log_softmax(x, dim=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d4ad45f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(101)\n",
+    "model = Cnn()\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr = 1e-4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdf9b100",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
