--- a/research/Paper.ipynb
+++ b/research/Paper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3487ff80-2501-493d-a775-16efec6f0f19",
    "metadata": {},
    "outputs": [],
@@ -16,6 +16,7 @@
     "from torchvision.io import read_image\n",
     "from torch.utils.data import Dataset\n",
     "from torchvision.transforms import ToTensor\n",
+    "import segmentation_models_pytorch as smp\n",
     "\n",
     "from skimage.morphology import skeletonize\n",
     "from skimage.util import invert\n",
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "913f22a6-3538-49d4-87a6-7ae6bbdeb820",
    "metadata": {},
    "outputs": [
@@ -72,7 +73,7 @@
        "Text(0.5, 1.0, 'skeleton')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c5ad30f8-40da-4b90-b758-907055bb54ae",
    "metadata": {},
    "outputs": [],
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "a0e5c65a-c237-4d55-948b-93b79ea25f82",
    "metadata": {},
    "outputs": [],
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "c373bc73-dd65-445d-aa5e-f051b1ee371f",
    "metadata": {},
    "outputs": [
@@ -281,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "39c37882-8b6b-4496-82b1-4c8889a26a5c",
    "metadata": {},
    "outputs": [
@@ -291,7 +292,7 @@
        "Text(0.5, 1.0, 'mask')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "92bcbbb2-69bc-4cd7-9b82-aa31b1cd2f92",
    "metadata": {},
    "outputs": [],
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "98e81409-0316-4102-8dad-5558b28f58eb",
    "metadata": {},
    "outputs": [],
@@ -431,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a829a9c8-315f-4a4d-8f2b-1e9414646bfb",
    "metadata": {},
    "outputs": [],
@@ -470,6 +471,68 @@
     "\n",
     "    save_data(type, epochs, train_losses, val_losses, accuracy_total, recall_total, precision_total, f1_score_total, iou_total)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "237324ed-0116-4d20-a7b1-7516143c6db3",
+   "metadata": {},
+   "source": [
+    "# U-Net Backbone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "8bf202ca-a9fd-4e4c-aeb0-74f3a3c81799",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://download.pytorch.org/models/resnet34-333f7ec4.pth\" to /Users/juancuevas/.cache/torch/hub/checkpoints/resnet34-333f7ec4.pth\n",
+      "100%|██████████████████████████████████████| 83.3M/83.3M [01:11<00:00, 1.23MB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = smp.Unet('resnet34', encoder_weights='imagenet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "f9a20cac-64ce-4d00-b383-98a43f9f3f44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[[ 0.3627,  0.1738,  0.3753,  ..., -0.0223,  0.3148, -0.5323],\n",
+      "          [ 0.7999,  0.3913,  1.1758,  ...,  0.1892,  0.1742,  0.0847],\n",
+      "          [ 1.3064,  1.1174,  1.4139,  ...,  0.2694,  0.9730,  0.3263],\n",
+      "          ...,\n",
+      "          [ 1.2458,  1.2503,  1.0034,  ...,  0.3092,  0.9751, -0.1911],\n",
+      "          [ 0.6954,  0.2298,  0.6290,  ...,  0.1516, -0.0524, -0.0371],\n",
+      "          [ 0.4480, -0.1818,  0.3398,  ..., -1.0558,  0.1045,  0.3589]]]],\n",
+      "       grad_fn=<ConvolutionBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.rand((1,3,512,512))\n",
+    "y = model(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ac3dcc1-9980-4f45-89a4-21fa351c4dac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
