--- a/research/Paper.ipynb
+++ b/research/Paper.ipynb
@@ -137,13 +137,14 @@
    "source": [
     "class UnetDataset(Dataset):\n",
     "\n",
-    "    def __init__(self, img_dir, label_dir, names , transform=None, label_transform=None):\n",
+    "    def __init__(self, img_dir, label_dir, names , transform=None, label_transform=None, preprocessing=None):\n",
     "        super().__init__()\n",
     "        self.img_dir = img_dir\n",
     "        self.label_dir = label_dir\n",
     "        self.names = names\n",
     "        self.transform = transform\n",
     "        self.label_transform=label_transform\n",
+    "        self.preprocessing=preprocessing\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.names)\n",
@@ -162,6 +163,8 @@
     "\n",
     "        if self.label_transform:\n",
     "            label = self.label_transform(label)\n",
+    "        if self.preprocessing:\n",
+    "            image, label = self.preprocessing(image, label)\n",
     "\n",
     "        return image, label\n",
     "    "
@@ -266,9 +269,9 @@
     "\tToTensor(),\n",
     "])\n",
     "\n",
-    "train_dataset = UnetDataset(img_dir, label_dir, X_train, transform=img_transforms, label_transform=label_transform)\n",
-    "test_dataset = UnetDataset(img_dir, label_dir, X_test, transform = img_transforms, label_transform=label_transform)\n",
-    "val_dataset = UnetDataset(img_dir, label_dir, X_val, transform = img_transforms, label_transform=label_transform)\n",
+    "train_dataset = UnetDataset(img_dir, label_dir, X_train, transform=img_transforms, label_transform=label_transform, preprocessing=preprocessing)\n",
+    "test_dataset = UnetDataset(img_dir, label_dir, X_test, transform = img_transforms, label_transform=label_transform, preprocessing=preprocessing)\n",
+    "val_dataset = UnetDataset(img_dir, label_dir, X_val, transform = img_transforms, label_transform=label_transform, preprocessing=preprocessing)\n",
     "\n",
     "train_loader = DataLoader(train_dataset, batch_size=10, shuffle=True)\n",
     "test_loader = DataLoader(test_dataset, batch_size=10, shuffle=False)\n",
@@ -342,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 74,
    "id": "92bcbbb2-69bc-4cd7-9b82-aa31b1cd2f92",
    "metadata": {},
    "outputs": [],
@@ -353,29 +356,31 @@
     "    accuracy = 0\n",
     "    recall = 0\n",
     "    precision = 0\n",
-    "    loss = 0\n",
+    "    total_loss = 0\n",
+    "\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
-    "        for b, (X, y) in enumerate(loader):\n",
-    "            X=X.to(device=device)\n",
-    "            Y=Y.to(device=device)\n",
-    "            preds=model(X)\n",
-    "            loss += criterion(preds,Y).item()\n",
-    "            tp, fp, tn, fn = smp.metrics.get_stats(preds, Y, model=\"binary\", threshold=0.5).item()\n",
-    "            iou_score += smp.metrics.iou_score(tp, fp, tn, fn, reduction=\"micro\").item()\n",
-    "            f1_score += smp.metrics.f1_score(tp, fp, tn, fn, reduction=\"micro\").item()\n",
-    "            accuracy += smp.metrics.accuracy(tp, fp, tn, fn, reduction=\"macro\").item()\n",
-    "            recall += smp.metrics.recall(tp, fp, tn, fn, reduction=\"micro-imagewise\").item()\n",
-    "            precision += smp.metrics.precision(tp, fp, tn, fn, reduction=\"macro\").item()\n",
+    "        for X, y in loader:\n",
+    "            X, y = X.float().to(device), y.float().to(device)\n",
+    "            preds = model(X)\n",
+    "            total_loss += criterion(preds, y).item()\n",
     "\n",
-    "    cant = len(loader)\n",
-    "    iou_score /= cant\n",
-    "    f1_score /= cant\n",
-    "    accuracy /= cant\n",
-    "    recall /= cant\n",
-    "    precision /= cant\n",
-    "    loss /= cant\n",
-    "    return loss, iou_score, f1_score, accuracy, recall, precision\n",
+    "            tp, fp, tn, fn = smp.metrics.get_stats(preds, y, mode=\"binary\", threshold=0.5)\n",
+    "            iou_score += smp.metrics.iou_score(tp, fp, tn, fn, reduction=\"micro\")\n",
+    "            f1_score += smp.metrics.f1_score(tp, fp, tn, fn, reduction=\"micro\")\n",
+    "            accuracy += smp.metrics.accuracy(tp, fp, tn, fn, reduction=\"macro\")\n",
+    "            recall += smp.metrics.recall(tp, fp, tn, fn, reduction=\"micro-imagewise\")\n",
+    "            precision += smp.metrics.precision(tp, fp, tn, fn, reduction=\"macro\")\n",
+    "\n",
+    "    batch_count = len(loader)\n",
+    "    return (\n",
+    "        total_loss / batch_count,\n",
+    "        iou_score / batch_count,\n",
+    "        f1_score / batch_count,\n",
+    "        accuracy / batch_count,\n",
+    "        recall / batch_count,\n",
+    "        precision / batch_count,\n",
+    "    )\n",
     "    "
    ]
   },
@@ -389,55 +394,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 77,
    "id": "98e81409-0316-4102-8dad-5558b28f58eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_data(model, epochs, train, val, accuracy, recall, precision, f1_score, iou):\n",
-    "    model_path = f\"./results/{model}.csv\"\n",
-    "    \n",
+    "def save_data(model_name: str, epochs: int, train_losses, val_losses, accuracy, recall, precision, f1_score, iou):\n",
+    "    model_path = f\"./results/{model_name}.csv\"\n",
+    "    os.makedirs(\"./results\", exist_ok=True)\n",
+    "\n",
+    "    new_data = pd.DataFrame.from_dict({\n",
+    "        'epoch': list(range(1, epochs + 1)),\n",
+    "        'train_loss': train_losses,\n",
+    "        'val_loss': val_losses,\n",
+    "        'accuracy': accuracy,\n",
+    "        'precision': precision,\n",
+    "        'recall': recall,\n",
+    "        'f1_score': f1_score,\n",
+    "        'iou': iou\n",
+    "    })\n",
+    "\n",
     "    if os.path.exists(model_path):\n",
     "        results = pd.read_csv(model_path)\n",
-    "        last_index = results.index[-1]\n",
-    "        \n",
-    "        counter = 0\n",
-    "        for i in range(last_index + 1, last_index + 1 + epochs):\n",
-    "            new_row = pd.DataFrame({\n",
-    "                'epoch': [i],\n",
-    "                'train_loss': [train[counter]],\n",
-    "                'val_loss': [val[counter]],\n",
-    "                'accuracy': [accuracy[counter]],\n",
-    "                'precision': [precision[counter]],\n",
-    "                'recall': [recall[counter]],\n",
-    "                'f1_score': [f1_score[counter]],\n",
-    "                'iou': [iou[counter]]\n",
-    "            })\n",
-    "            results = pd.concat([results, new_row], ignore_index=True)\n",
-    "            counter += 1\n",
+    "        results = pd.concat([results, new_data], ignore_index=True)\n",
     "    else:\n",
-    "        results = pd.DataFrame({\n",
-    "            'epoch': list(range(1, epochs + 1)),\n",
-    "            'train_loss': train,\n",
-    "            'val_loss': val,\n",
-    "            'accuracy': accuracy,\n",
-    "            'precision': precision,\n",
-    "            'recall': recall,\n",
-    "            'f1_score': f1_score,\n",
-    "            'iou': iou\n",
-    "        })\n",
-    "    \n",
-    "    results.to_csv(model_path, index=False)"
+    "        results = new_data\n",
+    "\n",
+    "    results.to_csv(model_path, index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 79,
    "id": "a829a9c8-315f-4a4d-8f2b-1e9414646bfb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(type, model, criterion, optimizer, train_loader, val_loader, epochs, device):\n",
+    "def train(model_type: str, model, criterion, optimizer, train_loader, val_loader, epochs: int, device: str):\n",
     "    train_losses = []\n",
     "    val_losses = []\n",
     "    accuracy_total = []\n",
@@ -445,31 +438,66 @@
     "    precision_total = []\n",
     "    f1_score_total = []\n",
     "    iou_total = []\n",
+    "\n",
     "    for epoch in range(epochs):\n",
     "        model.train()\n",
     "        train_loss = 0\n",
-    "        for b, (X_train, y_train) in enumarate(train_loader):\n",
-    "            X_train = X_train.float().to(device=device)\n",
-    "            y_train = y_train.float().to(device=device)\n",
+    "\n",
+    "        for b, (X_train, y_train) in enumerate(train_loader):\n",
+    "            X_train, y_train = X_train.float().to(device), y_train.float().to(device)\n",
+    "\n",
     "            y_pred = model(X_train)\n",
     "            loss = criterion(y_pred, y_train)\n",
-    "            train_loss += loss.item()\n",
+    "\n",
     "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "        train_losses.append(train_loss/len(train_loader))\n",
-    "        loss, iou_score, f1_score, accuracy, recall, precision = metrics(model, val_loader, criterion, device)\n",
-    "        val_losses.append(loss)\n",
+    "\n",
+    "            train_loss += loss.item()\n",
+    "\n",
+    "        train_losses.append(train_loss / len(train_loader))\n",
+    "\n",
+    "        val_loss, iou_score, f1_score, accuracy, recall, precision = metrics(\n",
+    "            model, val_loader, criterion, device\n",
+    "        )\n",
+    "        val_losses.append(val_loss)\n",
     "        accuracy_total.append(accuracy)\n",
     "        recall_total.append(recall)\n",
+    "        precision_total.append(precision)\n",
     "        f1_score_total.append(f1_score)\n",
     "        iou_total.append(iou_score)\n",
     "\n",
-    "        print(f\"Epoch {epoch+1}/{epochs} | Train Loss: {train_losses[-1]:.4f} | Val Loss: {loss:.4f} | \"\n",
-    "              f\"Accuracy: {iou_score:.4f} | Precision: {precision:.4f} | Recall: {recall:.4f} | \"\n",
-    "              f\"F1 Score: {f1_score:.4f} | IoU: {metrics[5]:.4f}\")\n",
+    "        print(\n",
+    "            f\"Epoch {epoch+1}/{epochs} | Train Loss: {train_losses[-1]:.4f} | \"\n",
+    "            f\"Val Loss: {val_loss:.4f} | IoU: {iou_score:.4f} | \"\n",
+    "            f\"Precision: {precision:.4f} | Recall: {recall:.4f} | \"\n",
+    "            f\"F1 Score: {f1_score:.4f}\"\n",
+    "        )\n",
     "\n",
-    "    save_data(type, epochs, train_losses, val_losses, accuracy_total, recall_total, precision_total, f1_score_total, iou_total)"
+    "    save_data(\n",
+    "        model_type, epochs, train_losses, val_losses,\n",
+    "        accuracy_total, recall_total, precision_total,\n",
+    "        f1_score_total, iou_total\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fc9be2e-0860-462f-873d-0006419a5f84",
+   "metadata": {},
+   "source": [
+    "# Config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "ad011ec0-3e73-4317-8fc2-c16a9d7a57fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "epochs = 25"
    ]
   },
   {
@@ -477,31 +505,30 @@
    "id": "237324ed-0116-4d20-a7b1-7516143c6db3",
    "metadata": {},
    "source": [
-    "# U-Net Backbone"
+    "# U-Net w/ Resnet34 imagnet Backbone"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42e6c197-b73c-420d-bc51-5df77a3afc22",
+   "metadata": {},
+   "source": [
+    "## Test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 86,
    "id": "8bf202ca-a9fd-4e4c-aeb0-74f3a3c81799",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading: \"https://download.pytorch.org/models/resnet34-333f7ec4.pth\" to /Users/juancuevas/.cache/torch/hub/checkpoints/resnet34-333f7ec4.pth\n",
-      "100%|██████████████████████████████████████| 83.3M/83.3M [01:11<00:00, 1.23MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model = smp.Unet('resnet34', encoder_weights='imagenet')"
+    "unet = smp.Unet('resnet34', encoder_weights='imagenet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 87,
    "id": "f9a20cac-64ce-4d00-b383-98a43f9f3f44",
    "metadata": {},
    "outputs": [
@@ -509,27 +536,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[[ 0.3627,  0.1738,  0.3753,  ..., -0.0223,  0.3148, -0.5323],\n",
-      "          [ 0.7999,  0.3913,  1.1758,  ...,  0.1892,  0.1742,  0.0847],\n",
-      "          [ 1.3064,  1.1174,  1.4139,  ...,  0.2694,  0.9730,  0.3263],\n",
+      "tensor([[[[ 1.0162,  0.4892,  0.6568,  ...,  0.1498,  0.9385,  0.1043],\n",
+      "          [ 0.9885,  0.2854,  0.8288,  ...,  0.7941,  0.8776,  0.5370],\n",
+      "          [ 0.8577,  0.0198,  0.0912,  ...,  0.0525,  0.1859, -0.4823],\n",
       "          ...,\n",
-      "          [ 1.2458,  1.2503,  1.0034,  ...,  0.3092,  0.9751, -0.1911],\n",
-      "          [ 0.6954,  0.2298,  0.6290,  ...,  0.1516, -0.0524, -0.0371],\n",
-      "          [ 0.4480, -0.1818,  0.3398,  ..., -1.0558,  0.1045,  0.3589]]]],\n",
+      "          [ 0.9538,  0.0039, -0.7345,  ...,  1.5246,  1.5861,  0.1866],\n",
+      "          [ 1.6006,  0.7160, -0.0040,  ...,  0.0426,  0.6518,  0.4869],\n",
+      "          [-0.1060, -0.1427,  0.0192,  ..., -0.6510,  0.4379, -0.0382]]]],\n",
       "       grad_fn=<ConvolutionBackward0>)\n"
      ]
     }
    ],
    "source": [
     "x = torch.rand((1,3,512,512))\n",
-    "y = model(x)\n",
+    "y = unet(x)\n",
     "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20501feb-3446-4581-aba3-4ed1a67a8e3b",
+   "metadata": {},
+   "source": [
+    "## Training"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ac3dcc1-9980-4f45-89a4-21fa351c4dac",
+   "id": "e198fae3-0ca2-49ea-b26a-baef3a1dc161",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unet = smp.Unet('resnet34', encoder_weights='imagenet')\n",
+    "criterion = smp.losses.FocalLoss(mode='binary')\n",
+    "optimizer = torch.optim.Adam(unet.parameters(), lr=1e-4)\n",
+    "train('unet', unet, criterion, optimizer, train_loader, val_loader, epochs, device)\n",
+    "save_model(unet, \"unet_resnet34\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55d2cfcf-0dfd-4558-b6c0-e7d6c2bedf06",
    "metadata": {},
    "outputs": [],
    "source": []
