--- a/practice/pointcloud.ipynb
+++ b/practice/pointcloud.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a27d1442",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3133486\n",
+      "51292\n",
       "['X', 'Y', 'Z', 'intensity', 'return_number', 'number_of_returns', 'scan_direction_flag', 'edge_of_flight_line', 'classification', 'synthetic', 'key_point', 'withheld', 'scan_angle_rank', 'user_data', 'point_source_id', 'gps_time', 'red', 'green', 'blue']\n"
      ]
     },
@@ -42,13 +42,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-03 21:14:31.885 python[726:3919582] +[IMKClient subclass]: chose IMKClient_Modern\n",
-      "2025-02-03 21:14:31.885 python[726:3919582] +[IMKInputSession subclass]: chose IMKInputSession_Modern\n"
+      "2025-02-04 21:57:15.569 python[6926:4100627] +[IMKClient subclass]: chose IMKClient_Modern\n",
+      "2025-02-04 21:57:15.569 python[6926:4100627] +[IMKInputSession subclass]: chose IMKInputSession_Modern\n"
      ]
     }
    ],
    "source": [
-    "las = laspy.read(\"./db/pcl/section2.las\")\n",
+    "las = laspy.read(\"./db/pcl/tree.las\")\n",
     "print(len(las.points))\n",
     "print(list(las.point_format.dimension_names))\n",
     "\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "9db24bff",
    "metadata": {},
    "outputs": [
@@ -78,8 +78,8 @@
       "<PointFormat(3, 0 bytes of extra dims)>\n",
       "<LasHeader(1.2, <PointFormat(3, 0 bytes of extra dims)>)>\n",
       "<GeoKeyDirectoryVlr(7 geo_keys)>\n",
-      "<GeoAsciiParamsVlr(['WGS 84 / UTM zone 33S|WGS 84|', ''])>\n",
-      "<VLR(user_id: 'liblas', record_id: '2112', data len: 605)>\n"
+      "<GeoAsciiParamsVlr(['SWEREF99 TM|SWEREF99|', ''])>\n",
+      "<VLR(user_id: 'liblas', record_id: '2112', data len: 591)>\n"
      ]
     }
    ],
@@ -106,12 +106,54 @@
    "outputs": [],
    "source": [
     "xyz = np.vstack((las.x, las.y ,las.z)).transpose()\n",
-    "\n",
+    "points = las.points\n",
     "csf = CSF.CSF()\n",
     "csf.params.bSloopSmooth = False\n",
     "csf.params.cloth_resolution = 0.2\n",
     "csf.params.interations = 500\n",
     "csf.params.class_threshold = 4.0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f8077286",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0] Configuring terrain...\n",
+      "[0]  - bbMin: 508484 -262.354 6.30093e+06\n",
+      "[0]  - bbMax: 508491 -240.33 6.30094e+06\n",
+      "[0] Configuring cloth...\n",
+      "[0]  - width: 43 height: 41\n",
+      "[0] Rasterizing...\n",
+      "[0] Simulating...\n"
+     ]
+    }
+   ],
+   "source": [
+    "csf.setPointCloud(xyz)\n",
+    "ground = CSF.VecInt()\n",
+    "non_ground = CSF.VecInt()\n",
+    "csf.do_filtering(ground, non_ground)\n",
+    "outfile = laspy.LasData(las.header)\n",
+    "outfile.points = points[np.array(non_ground)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d848bcab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree = o3d.geometry.PointCloud()\n",
+    "tree_points = np.vstack((outfile.x, outfile.y, outfile.z))\n",
+    "tree.points = o3d.utility.Vector3dVector(tree_points.transpose())\n",
+    "o3d.visualization.draw_geometries([tree])"
    ]
   },
   {
